<resources>
    <string name="app_name">Pistacho Phone: Comerciales</string>

    <string name="lbl_nomEmpresa">Pistacho</string>
    <string name="btn_volver">Volver</string>
    <string name="btn_siguiente">Siguiente</string>


    <!-- Log In -->
    <string name="lbl_logIn">Iniciar Sesión</string>
    <string name="btn_logIn">Log In</string>

    <!-- principal -->

    <string name="btn_iniciar">Iniciar</string>
    <string name="lbl_nomDelegacion">Delegación provincial:</string>
    <string name="lbl_direccionDelegacion">Dirección:</string>
    <string name="lbl_telefDelegacion">Llamar a la delagacion</string>
    <string name="lbl_emailDelegacion">Email: example@example.com</string>

    <!-- Menu -->
    <string name="txt_calendario">Calendario</string>
    <string name="txt_gestionPedido">Gestión de pedidos</string>
    <string name="txt_gestionPartners">Gestión de partners</string>
    <string name="txt_envioDelegacion">Envios a la Delegación</string>

    <!-- pedido1 -->
    <string name="btn_elegirFecha">Fecha</string>
    <string name="btn_nuevoComercial">Nuevo comercial</string>
    <string name="btn_visualizaPedidos">Visualizar pedidos</string>


    <!-- pedido2 -->
    <string name="lbl_anadirArticulos">Añadir artículos</string>
    <string name="lbl_nomProd">Artículo:</string>
    <string name="lbl_stock">En stock:</string>
    <string name="lbl_cantidad">Cantidad:</string>
    <string name="lbl_precioTot">Precio total:</string>
    <string name="btn_addToPedido">Añadir linea</string>
    <string name="title_activity_maps">Pistacho Phone</string>
    <string name="todo2">TODO2</string>

    <!-- pedid3 -->
    <string name="btn_terminarPedido">Confirmar</string>
    <string name="lbl_comercial">Comercial:</string>
    <string name="lbl_cambiaPartner">Cambiar partner:</string>
    <string name="btn_anadirArticulos">Añadir articulos</string>
    <string name="btn_borrar">borrar</string>
    <string name="dar_de_alta">Dar de Alta</string>
    <string name="nombre">Nombre:</string>
    <string name="textview">TextView</string>
    <string name="direccion">Direccion:</string>
    <string name="poblacion">Poblacion:</string>
    <string name="cif">CIF:</string>
    <string name="email">Email:</string>
    <string name="telefono">Telefono:</string>
    <string name="volver">Volver</string>
    <string name="logo">logo</string>
    <string name="llamar">Llamar</string>
    <string name="enviar_correo_a_la_delegacion">Enviar correo a la delegacion</string>
    <string name="abrir">Abrir</string>
    <string name="a_adir">Añadir</string>
    <string name="calendario">Calendario</string>
    <string name="descripci_n">Descripción</string>
    <string name="a_adir_evento">Añadir Evento</string>
    <string name="guardar">Guardar</string>
    <string name="envios_a_delegaciones">Envios a Delegaciones</string>
    <string name="enviar">Enviar</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="pedido">pedido</string>
    <string name="todo">TODO</string>
    <string name="cantidad">Cantidad</string>
    <string name="prtotal">prTotal</string>
    <string name="lbl_fecha">Pedido a fecha de   </string>
    <string name="realizar_pedido">Realizar Pedido</string>
    <string name="gestion_de_partners">Gestion de Partners</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

    <!-- resumen pedidos -->
    <string name="lsv_lbl_fecha">Fecha: </string>
    <string name="lsv_lbl_partner">partner</string>
    <string name="lsb_lbl_prTotal">prTotal</string>
    <string name="lbl_nomComercial">Pedidos de</string>


</resources>