<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/lsv_lbl_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lsv_lbl_fecha"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lsv_lbl_partner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/lsv_lbl_partner"
            app:layout_constraintBottom_toBottomOf="@+id/lsv_lbl_fecha"
            app:layout_constraintEnd_toStartOf="@+id/lsv_lbl_prTotal"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toEndOf="@+id/lsv_lbl_fecha"
            app:layout_constraintTop_toTopOf="@+id/lsv_lbl_fecha" />

        <TextView
            android:id="@+id/lsv_lbl_prTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/lsb_lbl_prTotal"
            app:layout_constraintBottom_toBottomOf="@+id/lsv_lbl_fecha"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toTopOf="@+id/lsv_lbl_fecha" />

        <Button
            android:id="@+id/button"
            android:layout_width="66dp"
            android:layout_height="33dp"
            android:layout_marginEnd="24dp"
            android:text="@string/btn_borrar"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/lsv_lbl_fecha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lsv_lbl_fecha" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>