<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logoPistacho"
        android:layout_width="52dp"
        android:layout_height="62dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pinguino" />

    <TextView
        android:id="@+id/lbl_nomEmpresa9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/lbl_nomEmpresa"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logoPistacho"
        app:layout_constraintEnd_toStartOf="@+id/img_logoPistacho"
        app:layout_constraintTop_toTopOf="@+id/img_logoPistacho" />

    <TextView
        android:id="@+id/lbl_nomDelegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_nomDelegacion"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_comerciales" />

    <TextView
        android:id="@+id/lbl_direccionDelegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_direccionDelegacion"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_nomDelegacion" />

    <TextView
        android:id="@+id/lbl_emailDelegacion"
        android:layout_width="222dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center|left"
        android:text="@string/lbl_emailDelegacion"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_telefDelegacion" />

    <TextView
        android:id="@+id/lbl_telefDelegacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/lbl_telefDelegacion"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_direccionDelegacion" />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="362dp"
        android:layout_height="49dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="88dp"
        android:layout_height="35dp"
        android:layout_marginEnd="50dp"
        android:text="Llamar"
        app:layout_constraintBottom_toBottomOf="@+id/lbl_telefDelegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lbl_telefDelegacion"
        app:layout_constraintVertical_bias="0.437" />

    <Spinner
        android:id="@+id/spn_comerciales"
        android:layout_width="244dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logoPistacho" />

</androidx.constraintlayout.widget.ConstraintLayout>