<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_calendario" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_nomEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nomEmpresa"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_logoPistacho"
            app:layout_constraintEnd_toStartOf="@+id/img_logoPistacho"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_logoPistacho" />

        <ImageView
            android:id="@+id/img_logoPistacho"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:contentDescription="@string/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.016"
            app:srcCompat="@drawable/pinguino" />

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendario"
            android:textColor="@android:color/background_dark"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <CalendarView
            android:id="@+id/calendarView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblTitulo"
            app:layout_constraintVertical_bias="0.129" />

        <EditText
            android:id="@+id/descEvento"
            android:layout_width="389dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/descripci_n"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView2"
            app:layout_constraintVertical_bias="0.098"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnAddEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_adir_evento"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.225"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descEvento"
            app:layout_constraintVertical_bias="0.506" />

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.762"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descEvento"
            app:layout_constraintVertical_bias="0.506" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>