<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity_menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lbl_nomEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nomEmpresa"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_logoPistacho"
            app:layout_constraintEnd_toStartOf="@+id/img_logoPistacho"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_logoPistacho" />

        <ImageView
            android:id="@+id/img_logoPistacho"
            android:layout_width="52dp"
            android:layout_height="62dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pinguino" />

        <TextView
            android:id="@+id/txt_envioDelegacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_envioDelegacion"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="@+id/img_envioDelegacion"
            app:layout_constraintStart_toStartOf="@+id/img_envioDelegacion"
            app:layout_constraintTop_toBottomOf="@id/img_envioDelegacion" />

        <TextView
            android:id="@+id/txt_gestionPartners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_gestionPartners"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="@id/img_gestionPartners"
            app:layout_constraintStart_toStartOf="@id/img_gestionPartners"
            app:layout_constraintTop_toBottomOf="@id/img_gestionPartners" />

        <TextView
            android:id="@+id/txt_gestionPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_gestionPedido"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="@+id/img_gestionPedidos"
            app:layout_constraintStart_toStartOf="@+id/img_gestionPedidos"
            app:layout_constraintTop_toBottomOf="@+id/img_gestionPedidos" />


        <ImageButton
            android:id="@+id/img_gestionPedidos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/borde"
            android:contentDescription="TODO"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_calendario"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pedidos" />

        <ImageButton
            android:id="@+id/img_envioDelegacion"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/borde"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="@+id/img_gestionPedidos"
            app:layout_constraintTop_toTopOf="@+id/img_gestionPartners"
            app:srcCompat="@drawable/delegaciones" />

        <ImageButton
            android:id="@+id/img_gestionPartners"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/borde"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/img_calendario"
            app:layout_constraintStart_toStartOf="@+id/img_calendario"
            app:layout_constraintTop_toBottomOf="@+id/img_calendario"
            app:srcCompat="@drawable/partners" />

        <ImageButton
            android:id="@+id/img_calendario"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/borde"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/img_gestionPedidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_gestionPedidos"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/calendario" />

        <TextView
            android:id="@+id/txt_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/txt_calendario"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            app:layout_constraintEnd_toEndOf="@+id/img_calendario"
            app:layout_constraintStart_toStartOf="@+id/img_calendario"
            app:layout_constraintTop_toBottomOf="@+id/img_calendario" />

        <Button
            android:id="@+id/btn_volver"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_volver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>